# python-flashcards

./: .gitignore  README.md
project/: main.py  pyproject.toml
project/resources/data/input/: example.json
project/src/: cli.py
project/src/core/: __init__.py  app.py  engine.py
project/src/data_io/: __init__.py  paths.py
project/src/data_io/reading/: __init__.py  console_reader.py  csv_reader.py  json_reader.py  reader.py
project/src/data_io/writing/: __init__.py  csv_writer.py  json_writer.py  txt_writer.py  writer.py
project/src/exceptions/: __init__.py  flashcard_exceptions.py  generic_exceptions.py
project/src/models/: __init__.py  file_models.py  flashcard.py  flashcards_class.py  params.py
project/src/ui/: __init__.py  console.py  console_ui.py  ui.py
project/src/ui/console/: __init__.py  console.py
project/src/utils/: __init__.py  files.py  io.py  loops.py  nums.py  sequence.py
project/test/: conftest.py  test_cli.py
project/test/core/: test_engine.py
project/test/data_io/reading/: test_console_reader.py  test_csv_reader.py  test_json_reader.py  test_reader.py
project/test/data_io/writing/: test_csv_writer.py  test_json_writer.py  test_txt_writer.py  test_writer.py
project/test/exceptions/: test_flashcard_exceptions.py  test_generic_exceptions.py
project/test/models/: test_flashcard.py  test_params.py
project/test/ui/: test_console.py
project/test/utils/: test_io.py  test_loops.py  test_nums.py
tasks/step1/: stage1_card1.md
tasks/step2/: stage2_what_on_card.md
tasks/step3/: stage3_make_it_your_own.md
(+4 files in other folders)
